--- a/theDefault/src/main/resources/theLastLightModResources/localization/eng/DefaultMod-Power-Strings.json
+++ b/theDefault/src/main/resources/theLastLightModResources/localization/eng/DefaultMod-Power-Strings.json
@@ -1,10 +1,25 @@
 {
-"theLastLightMod:CommonPower": {
-        "NAME": "Placeholder Power",
-        "DESCRIPTIONS": ["You applied #b", " keyword.", " keywords."]
-},
-"theLastLightMod:RarePower": {
-        "NAME": "Placeholder Power",
-        "DESCRIPTIONS": ["At the start of your turn, TOUCH #b", " enemy." , " enemies."]
-}
+        "theLastLightMod:CommonPower": {
+                "NAME": "Placeholder Power",
+                "DESCRIPTIONS": [
+                        "You applied #b",
+                        " keyword.",
+                        " keywords."
+                ]
+        },
+        "theLastLightMod:RarePower": {
+                "NAME": "Placeholder Power",
+                "DESCRIPTIONS": [
+                        "At the start of your turn, TOUCH #b",
+                        " enemy.",
+                        " enemies."
+                ]
+        },
+        "theLastLightMod:FriendshipPower": {
+                "NAME": "Friendship",
+                "DESCRIPTIONS": [
+                        "You have #b",
+                        " #yFriendship."
+                ]
+        }
 }
