--- a/theDefault/src/main/resources/theLastLightModResources/localization/eng/DefaultMod-Power-Strings.json
+++ b/theDefault/src/main/resources/theLastLightModResources/localization/eng/DefaultMod-Power-Strings.json
@@ -19,7 +19,13 @@
                 "NAME": "Friendship",
                 "DESCRIPTIONS": [
                         "You have #b",
-                        " #yFriendship."
+                        " thelastlightmod:Friendship."
+                ]
+        },
+        "theLastLightMod:WitherPower": {
+                "NAME": "Wither",
+                "DESCRIPTIONS": [
+                        "While thelastlightmod:Wither is applied, Weak, Vulnerable, and Poison will not decrease."
                 ]
         }
 }
