--- a/theDefault/src/main/resources/theLastLightModResources/localization/eng/DefaultMod-Relic-Strings.json
+++ b/theDefault/src/main/resources/theLastLightModResources/localization/eng/DefaultMod-Relic-Strings.json
@@ -43,7 +43,7 @@
     "FLAVOR": "Remember? We made these in fourth grade! See, mine is yellow and yours is blue!",
     "DESCRIPTIONS": [
       "At the start of each combat, gain #b",
-      " Friendship."
+      " thelastlightmod:Friendship."
     ]
   }
 }
