--- a/theDefault/src/main/resources/theLastLightModResources/localization/eng/DefaultMod-Card-Strings.json
+++ b/theDefault/src/main/resources/theLastLightModResources/localization/eng/DefaultMod-Card-Strings.json
@@ -56,10 +56,10 @@
   },
   "theLastLightMod:WitheringStrike": {
     "NAME": "Withering Strike",
-    "DESCRIPTION": "Deal !D! damage and apply !M! Weak and !theLastLightMod:SecondMagic! Wither to an enemy."
+    "DESCRIPTION": "Deal !D! damage and apply !M! Weak and !theLastLightMod:SecondMagic! thelastlightmod:Wither to an enemy."
   },
   "theLastLightMod:WitheringGlare": {
     "NAME": "Withering Glare",
-    "DESCRIPTION": "Apply !M! Weak and then !theLastLightMod:SecondMagic! Wither to an enemy."
+    "DESCRIPTION": "Apply !M! Weak and !theLastLightMod:SecondMagic! thelastlightmod:Wither to an enemy."
   }
 }
